deployments/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: corgi-project-nd
  labels:
    app: pzblog-svc
  name: pzblog-svc
spec:
  sessionAffinity: None
  selector:
    app: pzblog
  ports:
    - name: http-80
      protocol: TCP
      targetPort: 80
      port: 80
