deployments/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: pzblog
  namespace: corgi-project
  annotations:
    kubesphere.io/creator: admin
spec:
  rules:
    - host: shimada666.corgi.plus
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: pzblog-svc
                port:
                  number: 80
